# DySTrack

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEV_deregistration.ipynb  LICENSE  README.md  genindex.html  index.html  notes.txt  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/_includes/: add_a_bit_of_extra_empty_space.doctree
.doctrees/api/: index.doctree
.doctrees/api/manager/: dystrack.manager.cmdline.doctree  dystrack.manager.manager.doctree  dystrack.manager.transmitters.doctree  index.doctree
.doctrees/api/pipelines/: dystrack.pipelines.center_of_mass.doctree  dystrack.pipelines.chick_node.doctree  dystrack.pipelines.lateral_line.doctree  dystrack.pipelines.utilities.doctree  index.doctree
.doctrees/intro/: howitworks.doctree  index.doctree  installation.doctree
.doctrees/pipelines/: advanced.doctree  anatomy.doctree  available.doctree  develop.doctree  index.doctree
.doctrees/pipelines/_includes/: share_your_pipeline_note.doctree
.doctrees/usage/: index.doctree  nikon_AXR.doctree  other_scopes.doctree  postprocessing.doctree  zeiss_880.doctree  zeiss_980.doctree
.doctrees/usage/_includes/: generic_before_you_start_info.doctree  start_dystrack_manager_instructions.doctree
.github/workflows/: dystrack-ci.yml  dystrack-docs.yml  dystrack-pypi.yml  mate-ci.yml
_includes/: add_a_bit_of_extra_empty_space.html
_sources/: index.rst.txt
_sources/api/: index.rst.txt
_sources/api/manager/: dystrack.manager.transmitters.rst.txt  index.rst.txt
_sources/api/pipelines/: dystrack.pipelines.chick_node.rst.txt  dystrack.pipelines.utilities.rst.txt  index.rst.txt
_sources/intro/: index.rst.txt
_sources/pipelines/: available.rst.txt  develop.rst.txt  index.rst.txt
_sources/usage/: index.rst.txt  other_scopes.rst.txt  zeiss_880.rst.txt
_sources/usage/_includes/: start_dystrack_manager_instructions.rst.txt
api/: index.html
api/manager/: dystrack.manager.cmdline.html  dystrack.manager.manager.html  dystrack.manager.transmitters.html  index.html
api/pipelines/: dystrack.pipelines.center_of_mass.html  dystrack.pipelines.chick_node.html  dystrack.pipelines.lateral_line.html  dystrack.pipelines.utilities.html  index.html
docs/source/: conf.py  index.rst
docs/source/_includes/: add_a_bit_of_extra_empty_space.rst  generic_unstable_software_warning.rst
docs/source/api/: dystrack.manager.rst  dystrack.pipelines.rst  dystrack.pipelines.utilities.rst  index.rst  mate.manager.rst  mate.pipelines.rst
docs/source/develop/: 1_advice.rst  2_anatomy.rst  3_advanced.rst  index.rst
docs/source/intro/: 1_howitworks.rst  3_experiment.rst  4_FAQs.rst  FAQs.rst  howitworks.rst  index.rst  installation.rst
docs/source/pipelines/: advanced.rst  anatomy.rst  available.rst  develop.rst  index.rst
docs/source/usage/: index.rst  nikon_AXR.rst  other.rst  other_scopes.rst  postprocessing.rst  test.rst  test2.rst  zeiss_880.rst  zeiss_980.rst
intro/: howitworks.html  index.html  installation.html
macros/: AX_NISGA3_PointsExpose-v6-20-02.ga3  AX_NISGA3_PointsExpose_v6-10-01.ga3  DEV_980_macro.py  DEV_980_position_macro.py  DEV_functions_980_macro.py  LSM980_ZENBlue_macro.py
notebooks/: Deregistration.ipynb  Run DySTrack from Jupyter.ipynb
pipelines/: advanced.html  anatomy.html  available.html  develop.html  index.html
pipelines/_includes/: share_your_pipeline_note.html
prototyping/: DEV_deregistration.ipynb  TEST_masking_lateral_line.ipynb
prototyping/legacy/: pt880_analyze.py  pt880_scope.py  pt880_start.py
run/: mate_lateral_line.py  run_center_of_mass.py  run_chick_node.py  run_lateral_line.py  run_lateral_line_organ.py
src/dystrack/manager/: cmdline.py  manager.py  transmitters.py
src/legacy/: pt880dev_runImageAnalysis.py
src/mate-manager/: feedback.py  feedback_txt.py  masking.py  start.py
src/mate_manager/: feedback.py  feedback_txt.py  run_mate.py  start.py
tests/: RUN_MATE.ipynb  TEST_MATE.ipynb  TEST_macro.py  TEST_masking_lateral_line.ipynb  coords.txt  masking_test.ipynb
tests/testdata/: test-chicknode_coords.pkl  test-chicknode_stdout.pkl  test-cnode_early_prescan2D.tiff  test-cnode_late_prescan2D.tiff  test-full_mate_coords.txt  test-full_prescan_prim_cldnb.czi  test-full_stdout.txt  test-pllo_880_prescan.czi  test-pllo_cyto_880_prescan2D.tif  test-pllo_mem_980_prescan.czi  test-pllp_980_prescan.czi  test-pllp_980_prescan.tif  test-pllp_980_prescan2D.tif  test-pllp_AXR_prescan.nd2  test-pllp_NSPARC_prescan_1.tiff  test-pllp_coords.pkl  test-pllp_refout.txt  test-pllp_stdout.pkl  test0_mate_coords.txt  test0_stdout.txt  test1_880_prescan_1.czi  test1_coords.pkl  test1_stdout.pkl
tests/tests_integration/: test_main_event_loop.py
tests/tests_regression/: test_chick_node.py  test_lateral_line.py  test_run_mate.py
tests/tests_unit/: test_chick_node.py  test_cmdline.py  test_lateral_line.py  test_lateral_line_organ.py  test_loading.py  test_manager.py  test_transmitters.py
tests/tests_unitary/: test_cmdline.py  test_constraints.py  test_loading.py  test_manager.py  test_transmitters.py
usage/: index.html  nikon_AXR.html  other_scopes.html  postprocessing.html  zeiss_880.html  zeiss_980.html
usage/_includes/: generic_before_you_start_info.html  start_dystrack_manager_instructions.html
(+33 files in other folders)
