[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mate-tool"
version = "0.0.1"
authors = [
  { name="Jonas Hartmann", email="jonas.hartmann@ucl.ac.uk" },
  { name="Zimeng Wu", email="zimeng.wu.18@ucl.ac.uk" },
]
description = "Microscope automation for tracking experiments."
readme = "README.md"
requires-python = ">=3.10"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]

dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "scikit-image>=0.24.0",
  "bioio>=3.0.0",
  "bioio-tifffile>=1.3.0",
  "bioio-czi>=2.4.0",
  "bioio-nd2>=1.5.0",
  "fsspec>=2022.8.0"
]

[project.urls]
"Homepage" = "https://charliebritton.github.io/website-placeholder"
"Source Code" = "https://github.com/WhoIsJack/MATE"
"Documentation" = "https://charliebritton.github.io/website-placeholder"
"Issues" = "https://github.com/WhoIsJack/MATE/issues"
"Bug Tracker" = "https://github.com/WhoIsJack/MATE/issues"
"User Support" = "https://github.com/WhoIsJack/MATE/issues"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-mock",
  "pytest-cov",
  "coverage",
  "fake-winreg",
  "black[jupyter]",
  "isort",
  "sphinx",
  "nbsphinx",
  "pydata-sphinx-theme",
  "jupyter",
  "ipykernel"
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--cov=src"
]

[tool.coverage.run]
data_file = "tests/.coverage"

[tool.black]
skip-string-normalization = false
line-length = 79

[tool.isort]
profile = "black"